--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FMS Market App Mockup</title>
+    <title>FMS Market Mockup</title>
   </head>
-  <body style="overflow: hidden;">
-    <div style="height:100vh" id="root"></div>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
